--- a/BeatSync-Client-Android/app/src/main/AndroidManifest.xml
+++ b/BeatSync-Client-Android/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
-        <activity android:name=".SignUpActivity"></activity>
+        <activity android:name=".SignUpActivity" />
+        <activity android:name=".ManageTracks"></activity>
     </application>
 
 </manifest>
