--- a/BeatSync-Service-Persistence/build.gradle
+++ b/BeatSync-Service-Persistence/build.gradle
@@ -1,13 +1,16 @@
 buildscript {
+    ext.kotlin_version = '1.2.30'
     repositories {
         mavenCentral()
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.10.RELEASE")
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
 apply plugin: 'idea'
+apply plugin: 'kotlin'
 apply plugin: 'org.springframework.boot'
 
 jar {
@@ -29,4 +32,15 @@ dependencies {
     compile group: 'org.mindrot', name: 'jbcrypt', version: '0.4'
 
     testCompile("junit:junit")
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+}
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
