--- a/BeatSync-Client-Android/app/src/main/AndroidManifest.xml
+++ b/BeatSync-Client-Android/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         </activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".SignUpActivity" />
-        <activity android:name=".ManageTracksActivity"></activity>
+        <activity android:name=".ManageTracksActivity" />
+        <activity android:name=".EditTrackActivity"></activity>
     </application>
 
 </manifest>
