Retrieving playlists tracks for editing
- Wrote some (terrible) code to retrieve a list of tracks that are
currently in a playlist and then add them to the master list of tracks
a band has. Next step is actually saving the tracks a user selects in
this activity

- Really need to refactor all of this code. Dear lord its so bad

--- a/BeatSync-Client-Android/app/src/main/AndroidManifest.xml
+++ b/BeatSync-Client-Android/app/src/main/AndroidManifest.xml
@@ -25,7 +25,10 @@
         <activity android:name=".SignUpActivity" />
         <activity android:name=".ManageTracksActivity" />
         <activity android:name=".EditTrackActivity" />
-        <activity android:name=".AddTrackActivity"></activity>
+        <activity android:name=".AddTrackActivity" />
+        <activity android:name=".ManagePlaylistsActivity" />
+        <activity android:name=".EditPlaylistMainDetailsActivity" />
+        <activity android:name=".EditPlaylistTracksActivity"></activity>
     </application>
 
 </manifest>
