--- a/BeatSync-Client-Android/app/src/main/AndroidManifest.xml
+++ b/BeatSync-Client-Android/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
         <activity android:name=".AddTrackActivity" />
         <activity android:name=".ManagePlaylistsActivity" />
         <activity android:name=".EditPlaylistMainDetailsActivity" />
-        <activity android:name=".EditPlaylistTracksActivity"></activity>
+        <activity android:name=".EditPlaylistTracksActivity" />
+        <activity android:name=".AddPlaylistActivity"></activity>
     </application>
 
 </manifest>
