--- a/BeatSync-Client-Android/app/src/main/AndroidManifest.xml
+++ b/BeatSync-Client-Android/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
         <activity android:name=".ManagePlaylistsActivity" />
         <activity android:name=".EditPlaylistMainDetailsActivity" />
         <activity android:name=".EditPlaylistTracksActivity" />
-        <activity android:name=".AddPlaylistActivity"></activity>
+        <activity android:name=".AddPlaylistActivity" />
+        <activity android:name=".AccountActivity"></activity>
     </application>
 
 </manifest>
